@@ -1,4 +1,8 @@
   07 Nov 2019; François Bissey <frp.bissey@gmail.com>
+  files/fsl-6.0.2-setup.patch:
+  sci-biology/fsl: do not build tcl/tk/libpng
+
+  07 Nov 2019; François Bissey <frp.bissey@gmail.com>
   +files/fsl-6.0.2-setup.patch, fsl-6.0.2.ebuild:
   sci-biology/fsl: Initial fix to fsl 6.0.2
 
